...
        let loginButton = UIButton.systemButton(
            with: UIImage(),
            target: self,
            action: #selector(didTapLoginButton)
        )

        loginButton.accessibilityIdentifier = "Authenticate"
        loginButton.translatesAutoresizingMaskIntoConstraints = false
        loginButton.backgroundColor = .ypWhite
        loginButton.setTitle(NSLocalizedString("auth_screen.login", comment: ""), for: .normal)
        loginButton.setTitleColor(.ypBlack, for: .normal)
        loginButton.titleLabel?.font = .boldSystemFont(ofSize: 17)
        loginButton.layer.cornerRadius = 16
...
