...

    // MARK: - Private Properties

    private var estimatedProgressObservation: NSKeyValueObservation?
    private lazy var wkWebView: WKWebView = {
        let webView = WKWebView()
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.translatesAutoresizingMaskIntoConstraints = false
        webView.backgroundColor = .ypWhite
        return webView
    }()

    private lazy var backwardButton: UIButton = {
...
